asd asd asd asd as das dasd asd

--- a/bead/bower.json
+++ b/bead/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "gyak3",
+  "name": "bead1",
   "version": "0.0.0",
   "authors": [
-    "horvathgyozo <gyozke@inf.elte.hu>"
+    "de3cyg <baukobalazs@hotmail.hu>"
   ],
   "license": "MIT",
   "ignore": [
